# source-code

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  requirements-e2e.txt
.cursor/agents/: developer.md  implementation-task-runner.md  principal-engineer.md  product-owner.md  qa-engineer.md  tech-lead-architect.md
.cursor/rules/: workflow-orchestrator.mdc
.cursor/skills/autonomous-implementation-orchestrator/: SKILL.md
.cursor/skills/e2e-robot-autonomous-loop/: SKILL.md
.cursor/skills/feature-discovery/: SKILL.md
.cursor/skills/implementation-pipeline/: SKILL.md
docker/zoekt-cli/: Dockerfile
docs/: runbook-local.md
e2e/: README.md
e2e/fixtures/: config.e2e.json
e2e/probes/: negative_probes.py
e2e/robot/: catalog_indexing.robot  health.robot  mcp.robot  negative.robot  ui.robot  ui_browser.robot
e2e/robot/libraries/: CatalogIndexingKeywords.py  McpKeywords.py
e2e/robot/resources/: auth.resource  browser.resource  catalog_indexing.resource  common.resource
examples/: config.json
migrations/: env.py
migrations/versions/: 0001_initial_catalog_schema.py  0002_scheduler_preference.py
spec/features/docs-cicd-e2e-release/: approvals.md  implementation-plan.md  requirements.md
spec/features/github-etl-mcp-rag/: approvals.md  implementation-plan.md  requirements-e2e-zoekt-index-host.md  requirements-healthz-static-mount.md  requirements.md
spec/features/mvp-e2e-audit-hardening/: approvals.md  implementation-plan.md  requirements.md
spec/features/mvp-local-e2e-green/: approvals.md  implementation-plan.md  requirements.md
src/github_rag/: __init__.py  settings.py
src/github_rag/app/: __init__.py  bootstrap.py
src/github_rag/catalog/: __init__.py  errors.py  memory.py  models.py  repository.py  sync.py  transitions.py
src/github_rag/concurrency/: __init__.py  limiter.py  parallel_slo.py
src/github_rag/config/: __init__.py  loader.py  schema.py  secrets.py
src/github_rag/delivery/: __init__.py  __main__.py  health.py  mcp_stdio.py  ports.py  runtime.py  wiring.py
src/github_rag/e2e/: __init__.py  __main__.py  credentials.py  env_loader.py  errors.py  host_env.py  launcher.py  paths.py  ports.py  suite.py  timeouts.py  zoekt_bin.py
src/github_rag/eligibility/: __init__.py  filter.py  gitignore.py  rules.py
src/github_rag/index/: __init__.py
src/github_rag/indexing/: __init__.py  errors.py  orchestrator.py  pipeline.py  ports.py  progress.py  startup_reconcile.py  types.py
src/github_rag/mcp/: __init__.py  errors.py  fake.py  ports.py  serialize.py  server.py  tools.py
src/github_rag/query/: __init__.py  errors.py  fake.py  ports.py  projection.py  resolve.py  service.py  types.py
src/github_rag/schedule/: __init__.py  cron_expr.py  errors.py  memory.py  ports.py  postgres.py  scheduler.py
src/github_rag/snapshot/: __init__.py  clone.py  diff.py  errors.py  github.py  local.py  models.py  provider.py
src/github_rag/sources/: __init__.py
src/github_rag/ui/: __init__.py  api.py  app.py  errors.py  issues.py  labels.py  ports.py  serialize.py
tests/bdd/: test_catalog_persistence.py  test_catalog_sync.py  test_config_loader.py  test_container_delivery.py  test_daily_scheduler.py  test_dec015_conformity.py  test_e2e_compose_zoekt_fix.py  test_file_eligibility.py  test_github_discovery.py  test_github_user_org_discovery.py  test_indexing_orchestrator.py  test_local_discovery.py  test_local_discovery_git_sdk.py  test_main_snapshot.py  test_management_ui.py  test_mcp_evidence_server.py  test_mcp_parallel_slo.py  test_mvp_e2e_audit_closure_pack.py  test_mvp_e2e_audit_coverage_inventory.py  test_mvp_e2e_audit_e2e_robot_run.py  test_mvp_e2e_audit_failure_backlog.py  test_mvp_e2e_audit_gap_fill_backlog.py  test_mvp_e2e_audit_hitl_env_prep.py  test_mvp_e2e_audit_pytest_run.py  test_mvp_e2e_robot.py  test_negative_integral.py  test_project_foundation.py  test_qdrant_vector_store.py  test_query_services.py  test_slm_metadata.py  test_treesitter_chunker.py  test_ui_browser_gap.py  test_worker_limiter.py  test_zoekt_adapter.py
tests/bdd/features/: catalog_persistence.feature  config_loader.feature  (+1 more)
tests/integration/: test_postgres_catalog_repository.py  test_scheduler_postgres_preference.py
tests/support/: __init__.py  compose_manifest.py
tests/unit/: test_settings.py
web/: app.js  index.html  styles.css
(+518 files in other folders)
