[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "github-rag"
version = "0.1.0"
description = "GitHub ETL, MCP and RAG application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=github_rag --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["github_rag"]

[tool.coverage.report]
fail_under = 95
show_missing = true
