[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "github-rag"
version = "0.1.0"
description = "GitHub ETL, MCP and RAG application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2",
    "alembic",
    "psycopg[binary]",
    "PyGithub>=2",
    "GitPython>=3.1",
    "pathspec>=0.12",
    "tree-sitter==0.26.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-java==0.23.5",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-markdown==0.5.1",
    "tree-sitter-yaml==0.7.2",
    "tree-sitter-json==0.24.8",
    "tree-sitter-xml==0.7.0",
    "tree-sitter-toml==0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
integration = [
    "testcontainers[postgres]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib evita colisão do dir tests/.../github com o pacote PyGithub `github`.
addopts = "--import-mode=importlib --cov=github_rag --cov-report=term-missing"
markers = [
    "integration: testes que exigem PostgreSQL real (Docker/testcontainers); pulados se indisponível",
]

[tool.coverage.run]
branch = true
source = ["github_rag"]
# Adaptador PostgreSQL: I/O só exercível contra PG real (testes `integration`,
# excluídos do run padrão de domínio — design §3.3/D-T03-010). Omitido do gate
# de cobertura ≥95% do run padrão para não penalizar quem não tem Docker.
omit = [
    "*/catalog/postgres/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
